# SmallBASIC

./: .gitignore  .gitmodules  AUTHORS  CMakeLists.txt  ChangeLog  Makefile.am  NEWS  README  README.TXT  README.md  autogen.sh  configure.ac  configure.in  io.github.smallbasic.SmallBASIC.json  io.github.smallbasic.json
src/: BUGS  Changes  Doxyfile  Makefile  Makefile.am  Menuconfig  README.Menuconfig  README.TXT  bas2pdb.cc  bc.c  bc.h  blib.c  blib.h  blib_db.c  blib_func.c  blib_graph.c  blib_math.c  blib_math.h  blib_sound.c  blib_ui.c  blib_ui.h  brun.c  ceval.c  chattr.bas  circle.c  clibmgr.c  console_main.c  cxx_sb.cpp  cxx_sb.hpp  decomp.c  dev_genfb.c  dev_genfb.h  dev_gpm.c  dev_lcgi.c  dev_ndcfb.c  dev_null.c  dev_oss.c  dev_sdl.c  dev_term.c  dev_term.h  (+95 more)
src/android/: AndroidManifest.xml  build.sh  build.xml  local.properties
src/basic-sources/: add_brace.bas  bob2.bas  errx.bas  pcre-test.bas  pdocview  sortex.bas  space_curve.bas  utest.bas
src/common/: Makefile.am  README.TXT  bc.c  bc.h  blib.c  blib.h  blib_db.c  blib_func.c  blib_graph.c  blib_math.c  blib_math.h  blib_sound.c  blib_ui.c  blib_ui.h  brun.c  ceval.c  circle.c  clibmgr.c  decomp.c  device.c  device.h  drvmouse.h  drvsound.h  eval.c  extlib.c  extlib.h  ffill.c  file.c  fmt.c  fmt.h  fs_irda.c  fs_irda.h  fs_memo.c  fs_memo.h  fs_pdoc.c  fs_pdoc.h  fs_serial.c  fs_serial.h  fs_socket_client.c  fs_socket_client.h  (+66 more)
src/cygwin/: Makefile  Makefile.am
src/devtools/: build_kwp.cpp
src/doc/: LICENSE  Makefile  README  README.BCC  README.DOS  README.HELIO  README.PALM  cutof-guide-palm.conf  cutof-guide-wt.conf  cutof.cxx  guide.c  guide.texi  pdb2bas.1  texi2html  texi2html.bas  texi2man.gema  txt2c.cxx
src/dos-djgpp/: Makefile  README.TXT  dev_adlib.c  dev_adlib.h  dev_djspk.c  dev_dos.c  dev_grx.c
src/ebm/: AnsiWindow.cpp  AnsiWindow.h  Browser.cpp  Browser.h  Dialog.cpp  Dialog.h  FileDlg.cpp  FileDlg.h  Form.cpp  Form.h  HTMLWindow.cpp  HTMLWindow.h  Makefile  README.TXT  SmallBASIC.atts  ebjlib.cpp  ebjlib.h  ebm.h  ebm_fs.cpp  ebm_main.cpp  ebm_main.h  ebm_mem.cpp  ebm_osd.cpp  initial.mom  input.cpp  libraries.link  os.def  os.link  piezo.cpp  resource.cpp  resource.h  resource.rcp  standalone.link
src/editor/: README  ted.cpp  ted.h
src/fltk/: AnsiWidget.cxx  AnsiWidget.h  BasicEditor.cxx  BasicEditor.h  EditorWidget.cxx  EditorWidget.h  EditorWindow.cpp  EditorWindow.cxx  EditorWindow.h  FileWidget.cxx  FileWidget.h  Fl_Ansi_Window.cpp  Fl_Ansi_Window.h  Fl_Help_Widget.cpp  HelpWidget.cxx  HelpWidget.h  MainWindow.cpp  MainWindow.cxx  MainWindow.h  Makefile  Makefile.am  Profile.cxx  Profile.h  README.TXT  StringLib.cxx  StringLib.h  TtyWidget.cxx  TtyWidget.h  agg.cxx  blib_fltk_ui.cpp  blib_fltk_ui.cxx  build_kwp.cxx  dev_fltk.cpp  dev_fltk.cxx  kwp.cxx  makedepend  sbasic.nsi  sbfltk.rc  smallbasic.desktop
src/gtk/: Makefile.am  configure.in  sbgtk.glade  sbgtk.gladep
src/helio/: Makefile.VTOS  README.TXT  dev_helio.c  helio_iface.c
src/ide-console/: .help  .sbwords  Makefile  README.TXT  hello.bas  sbide.cc  ted_dt.cc  ted_dt.h
src/ide-fltk/: EditorWindow.cpp  EditorWindow.h  Fl_Ansi_Window.cpp  Fl_Ansi_Window.h  Fl_Help_Widget.cpp  HelpWidget.h  MainWindow.cpp  MainWindow.h  Makefile  Makefile.am  README.TXT  StringLib.cpp  StringLib.h  blib_fltk_ui.cpp  build_kwpc.c  dev_fltk.c  dev_fltk.cpp  hello.bas  kwp.cxx  sbfltk.cxx  sbfltk.rc  sbfui.fl  sbfui_cb.h
src/ide-tvision/: Makefile  README.TXT  help.cc  help.h  helpbase.cc  helpbase.h  prop-test.cc  tprop.cc  tprop.hpp  tvedit.cc
src/images/: sb32x32.ppm  sb32x32.xpm
src/include/: module.h  var.h  var_map.h
src/info/: Makefile  README.TXT  cinfo.cc  info.cc  info.h  ninf.cc
src/languages/: chars.el.h  chars.en.h  keywords.el.c  keywords.en.c  messages.el.h  messages.en.h
src/lib/: lodepng.h  maapi.h  match.c  matrix.c  search.c  search.h  stb_textedit.h  str.c  str.h  xpm.c
src/mingw/: Makefile.am
src/modules/: Makefile  Makefile.am  autogen.sh  configure.ac  configure.in  example1.c  mod_utils.c  mod_utils.h
src/palm-arm/: Makefile  sbpad.def  sbpad.rcp
src/palmos/: Makefile  Makefile.no.multilink  dev_palm.c  inet.c  lopen_to_palmos_bridge.c  mem.c  palmfs.c  sbgo_icons.c  sbpad-sections.ld  sbpad-sections.s  sbpad.c  sbpad.rcp  sony_sdk_patch.h  syslib.c  syslib.h  ui.c
src/palmos5/: Makefile  build_sbgo_icons.c  dev_palm.c  lopen_to_palmos_bridge.c  mathlib.c  mathlib.h  palmfs.h  sbpad-sections.ld  sbpad-sections.s  sbpad.def  sbpad.h  ui.h
src/qt/: Makefile.am  ansiwidget.cpp  ansiwidget.h  dev_qt.cpp  device.cpp  fixedlayout.cpp  fixedlayout.h  form_ui.cpp  form_ui.h  httpfile.cpp  httpfile.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  sbasic.pro  sbasic.qrc  source_view.ui
src/sdl/: Makefile.am  blib_sdl_ui.cpp  dev_sdl.c  fixedfont.xpm  sbasic.nsi  welcome.bas
src/ui/: StringLib.cpp  ansiwidget.cpp  ansiwidget.h  audio.cpp  audio.h  canvas.h  editor.cpp  form.cpp  form_ui.cpp  form_ui.h  graphics.cpp  graphics.h  image.cpp  image.h  image_codec.cpp  image_codec.h  inputs.cpp  inputs.h  interface.h  keycode.h  keypad.cpp  keypad.h  keypad_icons.h  lodepng_codec.cpp  maapi.h  rgb.h  screen.cpp  screen.h  shape.h  strlib.cpp  strlib.h  system.cpp  system.h  textedit.cpp  textedit.h  theme.h  utils.h  window.cpp
src/unix/: Makefile  Makefile.am  cgr928.fnt  chr2c.c  el-928.c  inet.c  lnx928.fnt  nar928.fnt  rlgr928.fnt
src/utils/: Makefile  Makefile.nmk  README  chext.c  copy_doc_to_sf  copy_doxy_to_sf  d2u.cpp  mksmall.cpp  u2d.cpp
src/win32/: README.TXT  SBPad.INI  SBPad.bpr  SBPad.cpp  SBPad.dsk  SBPad.res  SDL_main.c  TedBCB.cpp  TedBCB.h  bas2pdb.bpr  bas2pdb.cpp  bas2pdb.dsk  bas2pdb.res  bcb.cpp  bcb.h  conv_main.cpp  conv_main.dfm  conv_main.h  conv_view.cpp  conv_view.dfm  conv_view.h  dev_bcb.cpp  dev_w32.c  dev_w32f.c  dev_winsnd.cpp  fabt.cpp  fabt.dfm  fabt.h  fcoprog.cpp  fcoprog.h  fsettngs.cpp  fsettngs.dfm  fsettngs.h  fsrc.cpp  fsrc.dfm  fsrc.h  gmain.cpp  gmain.dfm  gmain.h  pad1.cpp  (+13 more)
web/server/: Makefile.am  autogen.sh  configure.ac  main.c  (+3 more)
(+1078 files in other folders)
